# surrealls

./: Cargo.toml
editors/code/: README.md  biome.json  package.json  tsconfig.json
editors/code/src/: extension.ts  logger.ts
examples/: sandbox.surrealql
src/: main.rs
src/ast/: mod.rs
src/cli/: lsp.rs  mod.rs
src/lsp/: mod.rs
src/syn/: mod.rs  surrealql.pest
src/syn/tests/: empty_statements.pest-test  ident.pest-test  mod.rs
src/syn/tests/stmt/: use.pest-test
