[package]
name = "surrealls"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
from-pest = "0.3.4"
indoc = "2.0.7"
lazy_static = "1.5.0"
pest = "2.8.3"
pest-test = { git = "https://github.com/msanchezdev/pest-test", branch = "multitest-file" }
pest-test-gen = { git = "https://github.com/msanchezdev/pest-test", branch = "multitest-file" }
pest_derive = { version = "2.8.3", features = ["grammar-extras"] }
rowan = "0.16.1"
tokio = { version = "1.48.0", features = ["full"] }
tower-lsp = "0.20.0"
